<resources>
    <string name="app_name">Zianbam</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="intro">Pick up your preferece so you can easly find people who sahre common interest</string>
    <string name="question1">On your first date, if you were to choose between coffee and tea what would you prefer?</string>
    <string name="question2">Would you rather stay in or go out for a date?</string>
    <string name="question3">Your favorite choice?</string>
    <string name="question4">If you were to travel from a point of place to another (approx: 5 km) do you prefer?</string>
    <string name="question5">Would you  rather date with a full confident or a little shy person?</string>
    <string name="question6">Do you like vacation on summer or winter?</string>
    <string name="question7">Which pet would you like to keep?</string>
    <string name="question8">Are you looking for..</string>
    <string name="question9">Which music genre you like the most?</string>
    <string name="question10">Its your first movie night with your bf/gf, which genre you would choose to watch?</string>

    <string name="audience_promp">Audience</string>

    <string name="postype_promp">postype</string>
    <string-array name="postype">
        <item>Your feed</item>
        <item>Global feed</item>
    </string-array>

    <string-array name="audience">
        <item>Everyone</item>
        <item>Followers</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

</resources>
